# MEPA2002SAR

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  entrypoint.sh  fastdds.xml
3d_mapping_20260510_153453/: metadata.yaml
ESP32_Motor_Controller/: ESP32_Motor_Controller.ino
ESP32_pot_rot_encoder/: ESP32_pot_rot_encoder.ino
Electronics/: Electronics.kicad_prl  Electronics.kicad_pro  Electronics.kicad_sch
docs/: cleanup-spec.md  restructure-spec.md  style-guide.md  wiki-migration-plan.md
hardware/firmware/encoder/: encoder.ino
hardware/firmware/motor_controller/: motor_controller.ino
rosbags/: 3d_mapping_20260510_235505.mm  3d_mapping_20260510_235505.simplemap  3d_mapping_20260510_235505.tum  3d_mapping_20260510_235505_filtered.mm  filter-pipeline.yaml
rosbags/3d_mapping_20260510_152611/: 3d_mapping_20260510_152611_0.mcap  metadata.yaml
rosbags/3d_mapping_20260510_152823/: 3d_mapping_20260510_152823_0.mcap  metadata.yaml
rosbags/3d_mapping_20260510_225210/: metadata.yaml
rosbags/3d_mapping_20260510_235505/: metadata.yaml
rosbags/3d_mapping_20260511_012632/: metadata.yaml
rosbags/3d_mapping_20260511_014331/: metadata.yaml
rosbags/3d_mapping_20260511_134029/: metadata.yaml
rosbags/3d_mapping_20260511_135156/: metadata.yaml
rosbags/3d_mapping_20260511_152820/: metadata.yaml
scripts/: deps-export-apt  deps-export-pip  deps-export-rosdep  deps-list-apt  deps-list-pip  deps-list-rosdep  deps-status  mola-map.sh  mola_system.yaml  mola_system_noviz.yaml  rosdep-install  state-estimation-simple.yaml
src/GregorURDF/launch/: display.launch.py
src/GregorURDF/meshes/: Avstands-sensor-fremme.stl  Chassie.stl  Mecanum-wheel-RL.stl
src/GregorURDF/rviz/: display.rviz
src/GregorURDF/urdf/: Gergor_rotert.urdf  gregor.urdf
src/gregor_application/: CMakeLists.txt  package.xml
src/gregor_application/gregor_application/: yolo_common.py
src/gregor_application/nodes/: IMU.py  YOLO.py  YOLO_gstreamer.py  allocator.py
src/gregor_bringup/: CMakeLists.txt  package.xml
src/gregor_bringup/config/: test_robot.rviz
src/gregor_bringup/config/IRL/: explore.yaml  mapper_params_online_async.yaml  nav2_params_smacHybrid.yaml
src/gregor_bringup/config/sim/: 3d_mapping_bridge.yaml  ekf.yaml  nav2_params_smac2D.yaml  ros_gz_bridge.yaml
src/gregor_bringup/launch/: 3dMapping.launch.py  gregor_real.launch.py  mola_lo.launch.py
src/gregor_bringup/scripts/: mola-map.sh  mola_system.yaml  mola_system_noviz.yaml  state-estimation-simple.yaml  state-estimation-smoother.yaml
src/gregor_description/: CMakeLists.txt  package.xml
src/gregor_description/meshes/: Avstands-sensor-bak.stl  Avstands-sensor-venstre.stl  Battery.stl  IMU.stl  LD06_LiDAR.stl  LiDAR-Mount.stl  Motor-RR.stl  RGB-Camera.stl  Thermal-camera.stl  Upper-Level.stl
src/gregor_description/rviz/: display.rviz
src/gregor_description/urdf/: gregor.urdf
src/gregor_sim_description/: CMakeLists.txt  package.xml
src/gregor_sim_description/hooks/: gregor_sim_description.sh.in
src/gregor_sim_description/models/xacro_test/: model.config
src/gregor_sim_description/worlds/: test_xacro.sdf.xacro
src/ros_gz_application/: CMakeLists.txt  package.xml
src/ros_gz_application/noder/: YOLO.py  laser_assembler.py  lidar_sweeper.py
src/ros_gz_application/nodes/: IMU.py  YOLO.py  YOLO_gstreamer.py  allocator.py  bamse_locator.py  collision_avoidance.py  exploration_monitor.py  laser_assembler.py  lidar3d.py  lidar_leveler.py  lidar_settle_calibrator.py  lidar_sweeper.py  thermal_converter.py  thermal_processing.py  thermal_reading.py
src/ros_gz_application/scripts/: cmd_vel_publisher.py
src/ros_gz_bringup/: package.xml
src/ros_gz_bringup/config/: 3d_mapping.rviz  ekf.yaml  ekf_imu.yaml  gregor3d.rviz  mapper_params_online_async.yaml  nav2_params_gregor.yaml  nav2_params_protomota.yaml  ros_gz_bridge.yaml  test_robot.rviz
src/ros_gz_bringup/config/IRL/: 3d_mapping.yaml  ekf_imu.yaml  explore.yaml  mapper_params_online_async.yaml  nav2_params_gregor.yaml  nav2_params_smac2D.yaml  nav2_params_smacHybrid.yaml
src/ros_gz_bringup/config/sim/: 3d_mapping_bridge.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params_protomota.yaml  test_robot.rviz
src/ros_gz_bringup/launch/: 3dMapping.launch.py  diff_drive.launch.py  gregor.launch.py  gregor3d.launch.py  gregor_real.launch.py  lidar3d_test.launch.py  lidar_calibrate.launch.py  mola_lo.launch.py  test_xacro.launch.py
src/ros_gz_description/models/xacro_test/: test.urdf.xacro
src/ros_gz_example_gazebo/: README.md
src/ros_gz_example_gazebo/worlds/: diff_drive.sdf  test_xacro.sdf.xacro
src/sensors/ldlidar/include/: lipkg.h
src/sensors/ldlidar/src/: lipkg.cpp
wiki/: Configuration-Files.md  Gazebo-Simulation.md  Getting-Started.md  Home.md  ROS-Nodes-and-Topics.md  Repository-Structure.md  Robot-Model.md
