<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gregor_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the ros_gz project</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Dharini Dutia</author>

  <depend>joint_state_publisher</depend>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>ros_gz_description</depend>
  <depend>ros_gz_gazebo</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>robot_localization</depend>
  <exec_depend>mola_lidar_odometry</exec_depend>
  <exec_depend>mola_state_estimation_simple</exec_depend>
  <exec_depend>mola_state_estimation_smoother</exec_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gregor_application</depend>
  <depend>camera_ros</depend>
  <depend>ldlidar</depend>
  <exec_depend>gregor_description</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

