<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gregor_sim_description</name>
  <version>0.0.0</version>
  <description>Gazebo sim worlds for the Gregor robot. (Robot URDF + meshes live in gregor_description.)</description>
  <maintainer email="fllufy.mydland@gmail.com">Mydland</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
